--- a/checkboxer/templates/base.html
+++ b/checkboxer/templates/base.html
@@ -1,1 +1,13 @@
 {% extends "bootstrap/base.html" %}
+<div class="container">
+    <div class="row">
+{% block navbar %}
+
+  <a href="{{ url_for('logout') }}">Выход</a>
+<a href="{{ url_for('index') }}">Главная</a>
+
+{% endblock %}
+
+
+    </div>
+</div>
