--- a/checkboxer/templates/login.html
+++ b/checkboxer/templates/login.html
@@ -1,36 +1,10 @@
 {% extends 'base.html' %}
-
-{% block content %}
-    <div class="container">
+{% import 'bootstrap/wtf.html' as wtf %}
+{% block app_content %}
         <div class="row">
+        <div class="col-md-4"
             <h1>Страница входа</h1>
-            {% with messages = get_flashed_messages() %}
-        {% if messages %}
-
-            {% for message in messages %}
-                <div class="alert alert-danger w-25" role="alert">{{ message }}</div>
-            {% endfor %}
-
-        {% endif %}
-        {% endwith %}
-           <form action="" METHOD="post" novalidate>
-               {{ login_form.hidden_tag() }}
-               <p>
-                   {{ login_form.login.label }}<br>
-                   {{ login_form.login(size=48) }}
-               </p>
-               <p>
-                   {{ login_form.password.label }}<br>
-                   {{ login_form.password(size=48) }}
-               </p>
-               <p>
-                    {{ login_form.remember_me() }}  {{ login_form.remember_me.label }}
-
-               </p>
-               <p>
-                   {{ login_form.submit }}
-               </p>
-           </form>
+            {{ wtf.quick_form(login_form) }}
         </div>
     </div>
 
