--- a/checkboxer/templates/checkbox.html
+++ b/checkboxer/templates/checkbox.html
@@ -18,3 +18,24 @@
 </div>
 {% endblock %}
 
+
+{% block scripts %}
+{{ super() }}
+    <script>
+    document.addEventListener('click', function (e){
+
+        if( e.target.type === 'checkbox'){
+            console.log(e.target.id);
+            let xhr = new XMLHttpRequest();
+            let url = 'http://127.0.0.1:5000/js';
+            xhr.open('POST', url, true);
+            xhr.setRequestHeader("Content-Type", "application/json");
+            var myData  = {'id':e.target.id, 'value':e.target.value}
+            var data = JSON.stringify(myData);
+            xhr.send(data);
+        }
+    });
+    </script>
+
+
+{% endblock %}
