--- a/checkboxer/templates/index.html
+++ b/checkboxer/templates/index.html
@@ -7,13 +7,16 @@
             <h1>ПРИВЕТ</h1>
             <a href="{{ url_for('add_checkbox_title') }}">Создать чекбоксер</a>
             {{ wtf.quick_form(add_user_form) }}
-            <h2>Чекбоксеры:</h2>
+
+        </div>
+    <div class="col-md-4">
+        <h2>Чекбоксеры:</h2>
             {% for checkbox in checkboxers %}
             <a href="{{ url_for('checkboxer', checkboxer=checkbox.checkbox_list_title,
                                 id=checkbox.id) }}">
                 {{ checkbox.checkbox_list_title }}
             </a><br>
             {% endfor %}
-               </div>
+    </div>
     </div>
 {% endblock %}
